added small SEO optimizing

--- a/src/templates/pages/contact.hbs
+++ b/src/templates/pages/contact.hbs
@@ -1,5 +1,7 @@
 ---
 title: Kontaktseite
+metadescription: <%= contact.metadescription %>
+metakeywords: <%= contact.metakeywords %>
 ---
 
 <div id="content">
