--- a/src/templates/pages/imprint.hbs
+++ b/src/templates/pages/imprint.hbs
@@ -1,5 +1,7 @@
 ---
 title: Impressumseite
+metadescription: <%= imprint.metadescription %>
+metakeywords: <%= imprint.metakeywords %>
 ---
 
 <!-- content-->
