--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -1,5 +1,8 @@
 ---
 title: Startseite
+metadescription: <%= index.metadescription %>
+metakeywords: <%= index.metakeywords %>
+googleVerification: true
 ---
 <!-- slider -->
 <div id="slider" class="slider3">
