--- a/src/templates/partials/footer.hbs
+++ b/src/templates/partials/footer.hbs
@@ -22,7 +22,8 @@ component: footer
                         <h1>Zahnarztpraxis</h1>
                         <p>Hallo liebe Gäste, wir freuen uns Sie begrüßen zu dürfen und dass Sie auf unserer Internetseite vorbei schauen.</p>
                         <p>Hier können Sie mehr erfahren und hoffentlich alle Ihre Fragen in Bezug auf einzelne / bestimmte Behandlungen, sowie über unser Team, beantworten.</p>
-                        <img alt="Logo Zahnarzt Awerkow" src="assets/images/za-logo-white.svg" width="118" height="31">
+                        <img alt="Logo-white Zahnarzt Awerkow" src="assets/images/za-logo-white.svg" width="118"
+                             height="31">
                     </div>
                 </div>
 
