--- a/src/templates/partials/header-section.hbs
+++ b/src/templates/partials/header-section.hbs
@@ -12,7 +12,8 @@ component: header
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="/">
-                    <img alt="Logo Zahnarzt Awerkow" src="assets/images/za-logo-black.svg" width="118" height="31">
+                    <img alt="Logo-black Zahnarzt Awerkow" src="assets/images/za-logo-black.svg" width="118"
+                         height="31">
                 </a>
             </div>
             <div class="navbar-collapse collapse">
