--- a/src/templates/partials/head.hbs
+++ b/src/templates/partials/head.hbs
@@ -1,9 +1,12 @@
 ---
 component: head tag
 ---
-<title>{{title}} | {{site.title}}</title>
+<title>{{site.title}} - {{title}}</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta name="description" content="Zahnarzt, Zahnarztpraxis in Berlin, Zahnarzt in Berlin Mitte, Wadim Awerkow, Levetzowstraße 25 10555 Berlin, 030 391 67 25">
-<meta name="keywords" content="Zahnarzt, Zahnarzt Berlin, Zahnärzte Berlin, Zahnarztpraxis Berlin, Zahnarzt Berlin Mitte, Zahnklinik Berlin, Kinderzahnarzt Berlin, Zahnbehandlung, Zahnschmerzen, Wadim Awerkow, Levetzowstraße 25, Awerkow, Levetzowstraße">
+<meta name="description" content="{{metadescription}}">
+<meta name="keywords" content="{{metakeywords}}">
+{{#if googleVerification}}
+    <meta name="google-site-verification" content="gEdviGPhLcb-Itou1mowgEpmDg26XSs-lhfviEYCklc"/>
+{{/if}}
