--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -33,7 +33,7 @@ googleVerification: true
                     </div>
 
                     <!-- LAYER NR. 2 -->
-                    <div class="tp-caption medium_thin_grey customin ltl"
+                    <div class="tp-caption medium_thin_black customin ltl"
                          data-x="110"
                          data-y="260"
                          data-customin="x:0;y:0;z:0;rotationX:90;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:0;transformPerspective:200;transformOrigin:50% 0%;"
@@ -102,7 +102,7 @@ googleVerification: true
                     </div>
 
                     <!-- LAYER NR. 3 -->
-                    <div class="tp-caption medium_thin_grey customin ltl"
+                    <div class="tp-caption medium_thin_black customin ltl"
                          data-x="750"
                          data-y="250"
                          data-customin="x:0;y:0;z:0;rotationX:90;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:0;transformPerspective:200;transformOrigin:50% 0%;"
@@ -124,7 +124,7 @@ googleVerification: true
                     </div>
 
                     <!-- LAYER NR. 4 -->
-                    <div class="tp-caption medium_thin_grey customin ltl"
+                    <div class="tp-caption medium_thin_black customin ltl"
                          data-x="820"
                          data-y="560"
                          data-customin="x:0;y:0;z:0;rotationX:90;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:0;transformPerspective:200;transformOrigin:50% 0%;"
@@ -178,7 +178,7 @@ googleVerification: true
                             <span><i class="fa fa-clock-o"></i></span>
                             <div class="list-cont">
                                 <h3>Mittwoch</h3>
-                                <p>14 - 19 Uhr</p>
+                                <p>nach Vereinbahrung</p>
                             </div>
                         </li>
                         <li>
